cms/static/css/cms.css
/* This file is for your main application css. */

/*elements*/
.container {
  min-height:100vh;
  position:relative;
}

.button {
  border: none;
}

/* Phoenix flash messages */
.alert:empty {
  display: none;
}

.checked-fill:checked~label {
  background-color: rgba(250, 183, 129, 0.7);
}

.checked-fill:focus~label {
  outline: auto 5px -webkit-focus-ring-color;
}

.unchecked, .topic-unchecked {
  background-image: url(/images/White_Plus.png);
  background-position: right 9px top 50%;
  background-size: 15px;
  background-repeat: no-repeat;
}

.topic-checked-fill:checked~label {
  background-color: white;
  background-image: url(/images/Orange_Tick.png);
  background-position: right 9px top 50%;
  background-size: 15px;
  background-repeat: no-repeat;
  color: #242E50;
  border-color: #FAB781;
}

.filter-check:checked~.filter-sidebar {
  margin-left: 0;
}

.filter-check:not(:checked)~.filter-sidebar, .sidebar-offscreen {
  margin-left: -120vw;
}

.filter-check:not(:checked)~.filter-sidebar + .sidebar-overlay-js {
  display: none;
}

.filter-check:checked~.filter-sidebar + .sidebar-overlay-js {
  display: block;
}

.sidebar-overlay-nojs {
  display: none;
}

/* removes default IOS styling */
.no-defaults {
  background-clip: padding-box;
}

.filter-check:not(:checked)~.filter-sidebar,
.filter-check:checked~.filter-sidebar {
  -webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
	transition-duration: 0.5s;
}

.sidebar {
  z-index: 10;
}

.stop-scrolling {
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.hide-filters {
  height: 0;
  overflow: hidden;
}

.filter-arrow-hide {
  display: none;
}

.link-hover:hover {
  background-color: rgba(0, 158, 226, 0.2)
}

.focus-lm-orange:focus {
  outline: none;
  border:1px solid #FAB781;
}

footer p a {
  padding: 0 2em 0 2em;
  text-decoration: none;
}

/* Landing Page - resource tags */

.lh-tag {
  line-height: 1.7;
}

.tag-selected, .tag-selected:hover {
  background-color: #FF9e1b;
}

/* Landing Page - resource like buttons */

.like, .like_no_hover {
  background-image: url("../images/Thumbs_up_normal.png");
  background-repeat: no-repeat;
}

.like:hover {
  background-image: url("../images/Thumbs_up_hover.png");
}

.liked {
  background-image: url("../images/Thumbs_up_clicked.png");
}

.dislike, .dislike_no_hover {
  background-image: url("../images/Thumbs_down_normal.png");
  background-repeat: no-repeat;
}

.dislike:hover, .disliked {
  background-image: url("../images/Thumbs_down_hover.png");
}

.disliked {
  background-image: url("../images/Thumbs_down_clicked.png");
}

.share {
  background-image: url("../images/Share.svg");
  background-repeat: no-repeat;
}

.share-email {
  background-image: url("../images/email-icon.svg");
  background-repeat: no-repeat;
}

.share-messenger {
  background-image: url("../images/messenger-icon.svg");
  background-repeat: no-repeat;
}

.share-whatsapp {
  background-image: url("../images/whatsapp-icon.svg");
  background-repeat: no-repeat;
}

.share-email:hover {
  background-image: url("../images/mail_hover.svg");
}

.share-messenger:hover {
  background-image: url("../images/messenger_hover.svg");
}

.share-whatsapp:hover {
  background-image: url("../images/whatsapp_hover.svg");
}

.next_left {
  background-image: url("../images/next_left.svg");
  background-size:contain;
}

.next_left:hover {
  background-image: url("../images/next_left_hover.svg");
  background-size:contain;
}

.next_right {
  background-image: url("../images/next_right.svg");
  background-size:contain;
}

.next_right:hover {
  background-image: url("../images/next_right_hover.svg");
  background-size:contain;
}

.blurred_background_header {
  background-color: rgba(255, 255, 255, 0.7);
}

.blurred_background {
  background-image: url("../images/blurred_gradient.png");
}

/* Styleguide */

code {
  padding: 2px 4px;
  font-size: 90%;
  color: black;
  background-color: #E9E9E9;
  border-radius: 4px;
}

.h05 {
  height: 0.5rem;
}

.w05 {
  width: 0.5rem;
}

.h18 {
  height: 1.8rem;
}

.h45 {
  height: 12rem;
}

.pt5-plus {
  padding-top: 5rem;
}

.pt10 {
  padding-top: 10rem;
}

@media screen and (min-width: 30em) {
  .h7-ns {
    height: 21.2rem;
  }
  a.ph5-plus-ns {
    padding-right: 13rem;
    padding-left: 13rem;
  }
  .lm-bg-dark-blue-hover:hover {
    background-color: #242E50;
  }
  .lm-white-hover:hover {
    color: #FFFFFF;
  }
  img.w-15-ns {
    width: 15%;
  }
}

#email_form h2 {
  font-family: 'Segoe UI-Bold';
}

.top--3 {
  top: -3rem;
}

.top--4 {
  top: -4rem;
}

.nr {
  resize: none;
}

@media only screen and (min-width: 950px) {
  /* the email button is half way over the
     edge of the bottom of the email card
     as per design:
     https://github.com/LDMW/app/issues/59#issuecomment-301418458*/
  #alphasection button {
    bottom: -30px;
  }

  .filter-check:not(:checked)~.filter-sidebar {
    margin-left: -50vw;
  }
}

.lm-feedback-label:before {
  content: '';
  background: #fff;
  border-radius: 100%;
  border: 1px solid grey;
  display: inline-block;
  width: 1.4em;
  height: 1.4em;
  position: relative;
  margin-right: 1em;
  vertical-align: top;
  cursor: pointer;
  text-align: center;
  transition: all 250ms ease;
}

.lm-feedback-radio:checked + .lm-feedback-label:before {
  background-color: #67CA39;
  box-shadow: inset 0 0 0 4px #fff;
}

.inner-shadow-active:active {
  box-shadow: 0 2px 7px 0 #949494 inset;
}

.feedback-form-section {
  font-size: 1.2rem;
  line-height: 1.2;
}

.feedback-section ul {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.lm-flash-icon {
  top: -0.9rem;
  right: -0.8rem;
}

.lm-tick-icon {
  padding: 0.3rem 0.3rem 0.4rem 0.4rem;
}

.lm-exclamation-icon {
  padding: 0.3rem 0.6rem 0.4rem 0.65rem;
}

.dn-important {
  display: none !important;
}

.disqus {
  border-top: none;
  border-radius: 0 0 0.125rem 0.125rem;
}

.full-resource {
  border-radius: 0.125rem 0.125rem 0 0;
  border-bottom: solid 1px #c2c2c2;
}

.br1-no-left {
  border-radius: 0 0.125rem 0.125rem 0;
}

.br1-no-right {
  border-radius: 0.125rem 0 0 0.125rem;
}

lm-ls1 {
  letter-spacing: 0.1rem;
}

@media screen and (min-width: 1210px) {
  .homepage_video_container {
    width: 500px;
    height: 280px;
  }
}

@media screen and (min-width: 1121px) and (max-width: 1209px) {
  .homepage_video_container {
    width: 450px;
    height: 252px;
  }
}

@media screen and (min-width: 1040px) and (max-width: 1122px) {
  .homepage_video_container {
    width: 400px;
    height: 224px;
  }
}

@media screen and (min-width: 60em) and (max-width: 1039px) {
  .homepage_video_container {
    width: 350px;
    height: 196px;
  }
}

@media screen and (max-width: 60em) {
  .homepage_video_container {
    width: 100%;
  }
}

@media screen and (max-width: 60em) {
  .homepage_video_container {
    height: 440px;
  }
}

@media screen and (max-width: 870px) {
  .homepage_video_container {
    height: 360px;
  }
}

@media screen and (max-width: 740px) {
  .homepage_video_container {
    height: 280px;
  }
}

@media screen and (max-width: 600px) {
  .homepage_video_container {
    height: 200px;
  }
}

@media screen and (max-width: 736px) {
  div.banner_buttons {
    display: none;
  }
}

.rich-text p {
  max-width: 100%;
  min-width: 50%;
  overflow: hidden;
}

.rich-text img {
  max-width: 100%;
  height: auto;
  margin: 0 1em;
}

.right {
  float: right;
  clear: both;
}

.left {
  float: left;
  clear: both;
}

.block-heading {
  margin: 1em;
}

.responsive-object {
    position: relative;
}

.responsive-object iframe,
.responsive-object object,
.responsive-object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#landing_page_hamburger > div > #beta-banner {
  position: relative !important;
}

#hamburger_content_id {
  left: -1000px;
  top: 0px;
  height: 100vh;
  transition: 0.4s;
  z-index: -1;
  position: absolute;
}

.show_hamburger {
  left: 0px !important;
  z-index: 9999 !important;
}

.assessment-text .rich-text {
  white-space: pre-wrap;
}

.w-200 {
  width: 200%;
}

.w-330 {
  width: 330%;
}

.w-33 {
  width: 33%;
}

.mr-5 {
  margin-right: 5%;
}

.r-0 {
  right: 0%;
}

.r-50 {
  right: 50%;
}

.r-115 {
  right: 115%;
}

.r-120 {
  right: 120%;
}

.r-230 {
  right: 230%;
}

.l-20 {
  right: -20%;
}

.tag-container {
  transition: all 0.4s ease-in-out;
  -webkit-transition: all 0.4s ease-in-out; /** Chrome & Safari **/
  -moz-transition: all 0.4s ease-in-out; /** Firefox **/
  -o-transition: all 0.4s ease-in-out; /** Opera **/
}

.h6 {
  height: 22rem;
}

.inactive {
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  opacity: 0.5;
}

/* taken from:
 https://css-tricks.com/equidistant-objects-with-css/#article-header-id-5
*/
.footer:after {
  content: '';
  width: 100%;
  display: inline-block;
}

.bottom--1-5 {
  bottom: -1.5rem;
}

.w-5 {
  width: 5%;
}

.w-95 {
  width: 95%;
}

.footer-block {
  border-bottom: solid 1px #c2c2c2;
}

.footer-block:first-of-type {
  border-top: solid 1px #c2c2c2;
}

.question-table:last-child {
  border-bottom: 0;
}

.left-40 {
  left: 40%;
}

.bottom--1-5 {
  bottom: -1.5rem;
}

.w-5 {
  width: 5%;
}

.w-95 {
  width: 95%;
}

.w-49 {
  width: 49%;
}

.mr-1p {
  margin-right: 1%;
}

.r-102 {
  right: 102%;
}

.r-204 {
  right: 204%;
}

@media screen and (max-width:480px) {
  div.mobile-scrollbars::-webkit-scrollbar {
    width: 8px;
  }

  div.mobile-scrollbars::-webkit-scrollbar-thumb {
    border-radius: 10px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
  }
}

.bb-hover:hover {
  border-bottom: 1px solid;
}

.bw2-hover:hover {
  border-width: 0.25rem;
}

.h7 {
  height: 30rem;
}

@media screen and (min-width:30em) {
  .w-200-ns {
    width: 200%;
  }

  .w-5-ns {
    width: 5%;
  }

  .w-95-ns {
    width: 95%;
  }

  .w-49-ns {
    width: 49%;
  }

  .h4-5-ns {
    height: 12rem;
  }

  .h5-5-ns {
    height: 18rem;
  }

  .mr-1p-ns {
    margin-right: 1%;
  }

  .r-49-ns {
    right: 49%;
  }

  .r-111-ns {
    right: 111%;
  }

  .l-13-ns {
    right: -13%;
  }

  .r-18-ns {
    right: 18%;
  }

  .r-80-ns {
    right: 80%;
  }

  .block-paragraph {
    padding: 1em 2em;
  }

  .resource-brand .rich-text h2 {
    font-size: 4rem;
    margin-top: 1rem;
    margin-bottom: 2rem;
  }

  .resource-brand .rich-text p {
    font-size: 1.1rem;
  }

  .bottom--1-5-ns {
    bottom: -1.5rem;
  }
}

@media screen and (min-width:60em) {
  .bottom--1-2-l {
    bottom: -1.2rem;
  }

  .r-5-l {
    right: 5%;
  }

  .bottom--1-2-l {
    bottom: -1.2rem;
  }

  .w-200-l {
    width: 200%;
  }

  .l-12-l {
    right: -12%;
  }

  .r-50-l {
    right: 50%;
  }

  .r-112-l {
    right: 112%;
  }

  .mr-1p-l {
    margin-right: 1%;
  }

  .mt-2-4-l {
    margin-top: 2.4rem
  }

  .w-8-l {
    width: 8%;
  }
}

@media screen and (max-width: 60em) and (min-width: 30em) {
  .w-15-m {
    width: 15%;
  }

  .mt-2-8-m {
    margin-top: 2.8rem
  }
}

@media screen and (max-width: 65em) and (min-width: 60em) {
  .h4-5-ml {
    height: 13rem;
  }

  .bottom--1-6-ml {
    bottom: -1.6rem
  }

  .mb3-ml {
    margin-bottom: 1rem;
  }

  .w-10-ml {
    width: 10%;
  }
}

@media screen and (min-width: 47em) {
  .dn-sm {
    display: none;
  }

  .dt-sm {
    display: table;
  }

  .dt--fixed-sm {
    table-layout: fixed;
    width: 100%;
  }

  .dtc-sm {
    display: table-cell;
  }
}

@media screen and (max-width:30em) {
  .h4-s-i {
    height: 10rem !important;
  }
}

